--- a/card.html
+++ b/card.html
@@ -13,7 +13,9 @@
 		<img src="panda.jpg" alt="Panda">
 		<div class="content_box">
 			<!-- your favorite animal's interesting fact goes here -->
-			<p class="cool-fact">Sadly, these beautiful bears are endangered and it’s estimated that only around 1,000 remain in the wild. That’s why we need to do all we can to protect them!</p>
+			<p class="cool-fact">Sadly, these beautiful bears are endangered 
+				             and it’s estimated that only around 1,000 remain in the wild. 
+				             That’s why we need to do all we can to protect them!</p>
 			<ul class="facts-list">
 				<!-- your favorite animal's list items go here -->
 				<li><span><strong>Kingdom</strong></span><em>: Animalia</em></li>
@@ -23,9 +25,9 @@
 			</ul>
 			<!-- your favorite animal's description goes here -->
 			<p>The giant panda, also known as panda bear or simply panda, is a bear
-    		   native to south central China. It is easily recognized by the large, distinctive black
+    		           native to south central China. It is easily recognized by the large, distinctive black
 			   patches around its eyes, over the ears, and across its round body.
-			   The name "giant panda" is sometimes used to distinguish it from the unrelated red panda.</p>
+   		           The name "giant panda" is sometimes used to distinguish it from the unrelated red panda.</p>
 		</div>
 	</article>
 </body>
